--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sarah & Michael's Wedding - June 15, 2024</title>
+    <title>Anna & Michael's Wedding - October 31, 2026</title>
     <meta name="description" content="Join us for our wedding celebration at Sunset Gardens, Napa Valley. RSVP and find all the details for our special day." />
-    <meta name="author" content="Sarah & Michael" />
+    <meta name="author" content="Anna & Michael" />
 
-    <meta property="og:title" content="Sarah & Michael's Wedding - June 15, 2024" />
+    <meta property="og:title" content="Anna & Michael's Wedding - June 15, 2024" />
     <meta property="og:description" content="Join us for our wedding celebration at Sunset Gardens, Napa Valley. RSVP and find all the details for our special day." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
