--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anna & Michael's Wedding - October 31, 2026</title>
-    <meta name="description" content="Join us for our wedding celebration at Sunset Gardens, Napa Valley. RSVP and find all the details for our special day." />
+    <meta name="description" content="Join us for our wedding celebration in Hua Hin, Thailand." />
     <meta name="author" content="Anna & Michael" />
 
     <meta property="og:title" content="Anna & Michael's Wedding - October 31st, 2026" />
-    <meta property="og:description" content="Join us for our wedding celebration at Sunset Gardens, Napa Valley. RSVP and find all the details for our special day." />
+    <meta property="og:description" content="Join us for our wedding celebration in Hua Hin, Thailand." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
