--- a/public/404.html
+++ b/public/404.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=/wedding-pathways/#/">
     <title>Redirecting…</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Page not found</h1>
+  </body>
 </html>
