--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta property="og:title" content="Anna & Michael's Wedding - October 31st, 2026" />
     <meta property="og:description" content="Join us for our wedding celebration in Hua Hin, Thailand." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://anna-mike.com/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://anna-mike.com/og-image.jpg" />
   </head>
 
   <body>
